--- a/macros.tex
+++ b/macros.tex
@@ -53,8 +53,8 @@
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{claim}[theorem]{Claim}
+\newtheorem{lemma}{Lemma}
+\newtheorem{claim}{Claim}
 
 \theoremstyle{plain}
 \newtheorem*{definition}{Definition}
