--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8,6 +8,22 @@
   year   = {2019},
 }
 
+@Book{Sontag1998,
+  title     = {Mathematical Control Theory},
+  subtitle  = {Deterministic Finite Dimensional Systems},
+  publisher = {Springer-Verlag New York},
+  year      = {1998},
+  author    = {Eduardo D. Sontag},
+}
+
+@Unpublished{Barto,
+  author = {Libor Barto and Jiří Tůma},
+  title  = {Lineární Algebra},
+  note   = {Preprint available at \url{http://www.karlin.mff.cuni.cz/~barto/}},
+  month  = may,
+  year   = {2019},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 %
